@@ -12,6 +12,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [CLUSTER] Evolve daemon's code to allow correctly handling tasks during service shutdowns
 ### Fixed
 - [FRONTEND] Allow skipping unresponsive nodes during HAProxy test_conf
+- [REPUTATION] Changed predator references to barricade
 
 
 ## [2.14.2] - Unreleased
